# fastrtc-voice-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  system_prompt.txt
examples/react-client/: README.md  index.html  package-lock.json  package.json
examples/react-client/src/: App.tsx  useVoiceAgent.ts
src/voice_agent/: cli.py
