[project]
name = "fastrtcvoiceagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastrtc[vad]>=0.0.34",
    "ollama>=0.6.1",
    "openai-whisper>=20250625",
    "typer>=0.21.0",
]

[dependency-groups]
dev = [
    "typer>=0.21.0",
]
